Issue #41 - try to properly implement alignwide and alignfull styling capability

--- a/style.css
+++ b/style.css
@@ -27,6 +27,28 @@ body {
     line-height: 1.625;
 }
 
+/**
+ */
+.wp-block-template-part >  *:not(.alignfull),
+figure:not(.alignfull) {
+    width: 71%;
+    max-width: 1040px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.wp-block-template-part > *:not(.alignfull).alignwide,
+figure:not(.alignfull).alignwide {
+    width: 88%;
+    max-width: 1340px;
+
+}
+
+figure.alignfull {
+    margin:0;
+
+}
+
 a {
     color: var(--wp--preset--color--greeny, #6a6a2a );
     text-decoration: none;
@@ -128,10 +150,23 @@ h6 {
 .footer .wp-block-navigation li {
     display: inline-block;
 }
-
+/*
 .wp-block-group.has-background {
-    margin-top: 1em;
+     padding: 0px 0px;
+ }
+
+//
+
+.wp-block-group.has-background .wp-block-group__inner-container .wp-block-post-content > *:not(figure),
+.wp-block-group.has-background .wp-block-group__inner-container *.wp-block-post-content  *:not(figure)
+{
+    padding: 20px 30px;
 }
+*/
+
+
+
+
 
 .page-footer {
     margin-top: 1em;
@@ -145,9 +180,9 @@ h6 {
     color: #e9e9c8;
 }
 
-.home .wp-block-group {
+.wp-block-group.header {
     background-color: #ffffff;
-    padding: 1em;
+    padding: 0.2em 0.5em 0.3em;
 }
 
 .page-footer .wp-block-column {
@@ -169,7 +204,7 @@ h6 {
 
 /**
   Should we consider adding .wp-block-template-part to the areas styled as div.className
- */
+
 .wp-block-group,
 .wp-block-group.page-footer .wp-block-group__inner-container,
 .wp-block-group.page,
@@ -185,6 +220,8 @@ div.home {
     max-width: 1140px;
     margin: 0 auto;
 }
+
+ */
 
 div.wp-block-template-part {
     display: block;
@@ -222,7 +259,6 @@ a.download {
     background: #5b5f13;
 }
 
-div.information,
 div.footer-menu{
     background-color: #fff;
     padding-top: 1em;
@@ -348,11 +384,20 @@ img {
     margin-right: auto;
 }
 
+/**
+ * Setting alignwide to halfway between alignfull and normal on my laptop.
+ * normal = 1140px
+ * alignfull = 1519px
+ *
+ * Perhaps this should be responsive.
+
 .wp-block-group .alignwide,
 .alignwide {
-    max-width: 1500px;
+    max-width: 1340px;
     margin: 0 auto;
 }
+
+ */
 
 /*
 .wp-block-group.col3 { columns: 3; column-width: 150px; column-rule: 2px solid #fff; column-gap: 3em; }
@@ -588,7 +633,7 @@ div.WP_DEBUG.END {
     border-bottom: 1px solid green;
 }
 
-div.wp-site-blocks div.WP_DEBUG:first-child {
+div.wp-site-blocks > div.WP_DEBUG:first-of-type {
     background-color: white;
     position: absolute;
     top: 0;
@@ -603,7 +648,7 @@ div.wp-site-blocks div.WP_DEBUG:first-child {
     padding: 0 1em;
 }
 
-div.wp-site-blocks div.WP_DEBUG:first-child:hover {
+div.wp-site-blocks > div.WP_DEBUG:first-of-type:hover {
    // margin-top: -1.1em;
     position: absolute;
     z-index: 100000;
